--- a/staly.css
+++ b/staly.css
@@ -1,4 +1,5 @@
-body {background-color: #FFDEE9;
+body {
+    background-color: #FFDEE9;
     background-image: linear-gradient(90deg, #FFDEE9 0%, #B5FFFC 100%);
     
 }
