--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ body {
     background-image: linear-gradient(90deg, #FFDEE9 0%, #B5FFFC 100%);
     
 }
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+}
